# maiana

./: .cproject  .gitignore  .project  README.md
application/: .cproject  README.md
application/Debug/: makefile
application/Debug/src/: subdir.mk
application/Release/: deploy.sh  makefile  sources.mk
application/Release/src/: subdir.mk
application/ldscripts/: mem.ld
application/src/: AISChannels.h  AISMessages.cpp  AISMessages.hpp  ChannelManager.cpp  CommandProcessor.cpp  Configuration.cpp  Configuration.hpp  DataTerminal.cpp  DataTerminal.hpp  EEPROM.hpp  EZRadioPRO.h  EventQueue.cpp  EventTypes.h  Events.cpp  Events.hpp  GPS.cpp  GPS.hpp  LEDManager.cpp  LEDManager.hpp  MenuScreens.cpp  NMEAEncoder.cpp  NoiseFloorDetector.cpp  NoiseFloorDetector.hpp  ObjectPool.hpp  RFIC.hpp  RXPacket.cpp  RXPacket.hpp  RXPacketProcessor.cpp  RXPacketProcessor.hpp  RadioManager.cpp  RadioManager.hpp  Receiver.cpp  Receiver.hpp  StationData.h  TXPacket.cpp  TXPacket.hpp  TXPowerSettings.h  TXScheduler.cpp  TXScheduler.hpp  Transceiver.cpp  (+10 more)
bootloader/: .cproject  README.md
bootloader/Release/: makefile
bootloader/Release/src/: subdir.mk
bootloader/ldscripts/: mem.ld
bootloader/src/: ApplicationMetadata.h  DataTerminal.cpp  DataTerminal.hpp  main.cpp  md5.c  md5.h
eagle/: README.md  fullcircuit4layer1.1b.brd  fullcircuit4layer1.1b.sch  logic.brd  logic.sch  logic3.1.brd  logic3.1.sch  rf.brd  rf9.1.b#1  rf9.1.sch
latest/: README.md
latest/Apps/maiana-update/: fwUpdateThread.py  maiana-update.fbp  maiana.py  maianaclient.py  mainframe.py  mainwindow.py  model.py
latest/CAD/: README.md
latest/Firmware/: .cproject  .gitignore  .project  README.md  Readme.md  STM32L412KBUx_FLASH.ld  STM32L432KBUx_FLASH.ld  openocd-flash-l412-release-build.cfg  openocd-flash-l422-release-build.cfg  openocd-flash-l432-release-build.cfg  openocd-flash-release-build.cfg
latest/Firmware/NMEA200Adapter/ais/: CMakeLists.txt  Makefile.am  ais.h  ais10.cpp  ais14.cpp  ais15.cpp  ais18.cpp  ais19.cpp  ais1_2_3.cpp  ais20.cpp  ais22.cpp  ais23.cpp  ais25.cpp  ais26.cpp  ais4_11.cpp  ais7_13.cpp  ais8.cpp  ais8_1_22.cpp  ais8_200.cpp  ais8_366_22.cpp  ais8_367.cpp  ais9.cpp  ais_bitset.cpp  decode_body.cpp  vdm.cpp
latest/Firmware/WiFiAdapter/core/: CMakeLists.txt  ais_config.c  ais_config.h  button.c  button.h  configuration.c  configuration.h  http_ais_api.c  http_handlers.c  http_nmea_api.c  http_server.c  http_server.h  http_sys_api.c  http_utils.c  http_utils.h  http_web_handlers.c  http_wifi_api.c  json-maker.c  json-maker.h  nmea_gateway.c  nmea_gateway.h  types.c  types.h  utils.c  utils.h  wifi.c  wifi.h
latest/Firmware/WiFiAdapter/html/: CMakeLists.txt  ais.html  index.html  nmea.html  ota.html  wifi.html
latest/Firmware/WiFiAdapter/html/css/: forms.css
latest/Firmware/WiFiAdapter/main/: CMakeLists.txt  MaianaWiFiAdapter.c
latest/Manuals/: README.md
legacy/: README.md
legacy/application/: .cproject
legacy/bootloader/: .project  README.md
legacy/eagle/: README.md  logic.sch
src/: AISChannels.h  AISMessages.cpp  AISMessages.hpp  ChannelManager.cpp  ChannelManager.hpp  CircularQueue.hpp  DataTerminal.cpp  DataTerminal.hpp  DebugPrinter.cpp  DebugPrinter.hpp  EEPROM.cpp  EEPROM.hpp  EventQueue.hpp  EventTypes.h  Events.cpp  Events.hpp  GPS.cpp  GPS.hpp  LEDManager.cpp  LEDManager.hpp  MenuScreens.hpp  NMEAEncoder.cpp  NMEAEncoder.hpp  NMEASentence.cpp  NMEASentence.hpp  NoiseFloorDetector.cpp  NoiseFloorDetector.hpp  RFIC.cpp  RFIC.hpp  RXPacket.hpp  RXPacketProcessor.cpp  RXPacketProcessor.hpp  RadioManager.cpp  RadioState.hpp  TXPacket.cpp  TXPowerSettings.h  TXScheduler.cpp  TXScheduler.hpp  Transceiver.cpp  Transceiver.hpp  (+7 more)
(+606 files in other folders)
