lib_LTLIBRARIES = libais.la

include_HEADERS = ais.h

libais_la_LDFLAGS = -version-info 0:0:0

libais_la_SOURCES = \
	$(libais_a_HEADERS) \
	ais.cpp \
	ais_bitset.cpp \
	ais1_2_3.cpp \
	ais4_11.cpp \
	ais5.cpp \
	ais6.cpp \
	ais7_13.cpp \
	ais8.cpp \
	ais8_1_22.cpp \
	ais8_1_26.cpp \
	ais8_200.cpp \
	ais8_366.cpp \
	ais8_366_22.cpp \
	ais8_367.cpp \
	ais9.cpp \
	ais10.cpp \
	ais12.cpp \
	ais14.cpp \
	ais15.cpp \
	ais16.cpp \
	ais17.cpp \
	ais18.cpp \
	ais19.cpp \
	ais20.cpp \
	ais21.cpp \
	ais22.cpp \
	ais23.cpp \
	ais24.cpp \
	ais25.cpp \
	ais26.cpp \
	ais27.cpp

