idf_component_register(EMBED_TXTFILES
                        "index.html"
                        "wifi.html"
                        "ais.html"
                        "nmea.html"
                        "css/forms.css"
                       EMBED_FILES
                         "images/maiana-logo.jpg" 
                      )
